--- a/src/i18n/pt-BR.json
+++ b/src/i18n/pt-BR.json
@@ -4,5 +4,9 @@
         "senha": "Senha",
         "entrar": "ENTRAR"   
     
+    },
+    "MENU": {
+        "Agendamentos": "Agendamentos",
+        "Perfil": "Perfil"
     }
 }
