--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -10,9 +10,10 @@
         "Perfil": "Profile"
     },
     "CADASTRO": {
+        "cadastro":"Register",
         "nome" : "Name:",
         "endereco" : "Adress:",
         "email" : "Email:",
-        "data ": "Date ingles"     
+        "data": "Date"     
     }
 }
